--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<html>
+
+<title>Joel Parker Henderson - GitHub Repos</title>
+
+<style>
+body {
+    font: sans-serif;
+}
+</style>
+
+<body>
+
 <h1>Joel Parker Henderson - GitHub Repos</h1>
 
 <b>For goals:</b>
@@ -50,7 +62,7 @@
 <li><a href="https://github.com/joelparkerhenderson/demo_aws_lambda">AWS Lamba</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_consul">Consul</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_d3_divs">D3 Divs</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_d3_stickies"></a>
+<li><a href="https://github.com/joelparkerhenderson/demo_d3_stickies">D3 Stickies</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_d3_target">D3 Target</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_data_schema_transforms">Schema transforms</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_datawire_microcosm">Datawire Microcosm</a>
@@ -102,3 +114,5 @@
 <li><a href="https://github.com/joelparkerhenderson/joelparkerhenderson_perl_cgi_util_1990s">Perl CGI utility code</a>
 </ul>
 
+</body>
+</html>
