--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
+<!DOCTYPE html>
 <html>
-
+<head>
 <title>Joel Parker Henderson - GitHub Repos</title>
-
-<style>
-body {
-    font: sans-serif;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="/assets/css/all.css">
+</head>
 
 <body>
 
