--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="https://github.com/joelparkerhenderson/team_focus">TEAM FOCUS teamwork framework</a>
 <li><a href="https://github.com/joelparkerhenderson/oblique_strategies">Oblique strategies for creative thinking</a>
 <li><a href="https://github.com/joelparkerhenderson/crucial_conversations">Crucial conversation</a>
-<<li><a href="https://github.com/joelparkerhenderson/first_aid_kit">First ait kit for teams</a>
+<li><a href="https://github.com/joelparkerhenderson/first_aid_kit">First ait kit for teams</a>
 </ul>
 
 <b>For projects:</b>
