Add git commit message

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 <li><a href="https://github.com/joelparkerhenderson/system_quality_attributes">System quality attributes</a>
 <li><a href="https://github.com/joelparkerhenderson/architecture_decision_record">Architecture Decision Record (ADR)</a>
 <li><a href="https://github.com/joelparkerhenderson/enterprise_architecture_assessment">Enterprise architecture assessment</a>
-</ul>
+<li><a href="https://github.com/joelparkerhenderson/git_commit_message">Git commit message formattin</a>
+<</ul>
 
 <b>Demo Code:</b>
 
