--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <li><a href="https://github.com/joelparkerhenderson/value_stream_mapping">Value Stream Mapping (VSM)</a>
 <li><a href="https://github.com/joelparkerhenderson/strategic_balanced_scorecard">Strategic Balanced Scorecard</a>
 <li><a href="https://github.com/joelparkerhenderson/agile_assessment">Agile assessment</a>
+<li><a href="https://github.com/joelparkerhenderson/lean_business_lists">Lean business lists</a>
 </ul>
 
 <b>For technical consulting:</b>
@@ -52,7 +53,7 @@
 <li><a href="https://github.com/joelparkerhenderson/system_quality_attributes">System quality attributes</a>
 <li><a href="https://github.com/joelparkerhenderson/architecture_decision_record">Architecture Decision Record (ADR)</a>
 <li><a href="https://github.com/joelparkerhenderson/enterprise_architecture_assessment">Enterprise architecture assessment</a>
-<li><a href="https://github.com/joelparkerhenderson/git_commit_message">Git commit message formatting</a>
+<li><a href="https://github.com/joelparkerhenderson/git_commit_message">Git commit message</a>
 </ul>
 
 <b>Demo Code:</b>
