--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
 
 <body>
 
-<h1>Joel Parker Henderson - GitHub Repos</h1>
+<!--
+DO:
+business_links
+enterprise_architecture_assessment
+etsy_leadership
+inspiring_people
+joelparkerhenderson_perl_cgi_util_1990s
+joelparkerhenderson_site
+lean_business_lists
+metrics
+milestones
+modeling_maturity_levels
+team
+-->
+
+<h1>Joel Parker Henderson</h1>
 
 <b>For goals:</b>
 
@@ -15,6 +30,7 @@
 <li><a href="https://github.com/joelparkerhenderson/objectives_and_key_results">Objectives & Key Results (OKRs)</a>
 <li><a href="https://github.com/joelparkerhenderson/key_performance_indicator">Key Performance Indictor (KPI)</a>
 <li><a href="https://github.com/joelparkerhenderson/metrics">Metrics: ideas & examples</a>
+<li><a href="https://github.com/joelparkerhenderson/vision_statements">Vision statements: ideas & examples</a>
 <li><a href="https://github.com/joelparkerhenderson/wordbooks">Wordbooks: glossaries, lexicons, terminology</a>
 </ul>
 
@@ -24,9 +40,12 @@
 <li><a href="https://github.com/joelparkerhenderson/ground_rules">Ground rules for teams</a>
 <li><a href="https://github.com/joelparkerhenderson/team_focus">TEAM FOCUS teamwork framework</a>
 <li><a href="https://github.com/joelparkerhenderson/oblique_strategies">Oblique strategies for creative thinking</a>
-<li><a href="https://github.com/joelparkerhenderson/crucial_conversations">Crucial conversation</a>
+<li><a href="https://github.com/joelparkerhenderson/crucial_conversations">Crucial conversations</a>
+<li><a href="https://github.com/joelparkerhenderson/feedback_request_template">Feedback request template</a>
+<li><a href="https://github.com/joelparkerhenderson/social_value_orientation">Social value orientation (SVO)</a>
 <li><a href="https://github.com/joelparkerhenderson/first_aid_kit">First ait kit for teams</a>
 </ul>
+
 
 <b>For projects:</b>
 
@@ -35,22 +54,23 @@
 <li><a href="https://github.com/joelparkerhenderson/pitch_deck_quick_start">Pitch deck quick start</a>
 <li><a href="https://github.com/joelparkerhenderson/milestones">Milestones ideas & examples</a>
 <li><a href="https://github.com/joelparkerhenderson/project_management_checklist">Project management checklist</a>
+<li><a href="https://github.com/joelparkerhenderson/responsible_disclosure">Responsible disclosure</a>
 </ul>
 
 <b>For assessments:</b>
 
 <ul>
-<li><a href="https://github.com/joelparkerhenderson/maturity_models">Maturity models</a>
+<li><a href="https://github.com/joelparkerhenderson/maturity_models">Maturity models (MMs)</a>
 <li><a href="https://github.com/joelparkerhenderson/value_stream_mapping">Value Stream Mapping (VSM)</a>
-<li><a href="https://github.com/joelparkerhenderson/strategic_balanced_scorecard">Strategic Balanced Scorecard</a>
+<li><a href="https://github.com/joelparkerhenderson/strategic_balanced_scorecard">Strategic Balanced Scorecard (SBS)</a>
 <li><a href="https://github.com/joelparkerhenderson/agile_assessment">Agile assessment</a>
-<li><a href="https://github.com/joelparkerhenderson/lean_business_lists">Lean business lists</a>
+<li><a href="https://github.com/joelparkerhenderson/lean_business_lists">Lean business lists</a> ??
 </ul>
 
 <b>For technical consulting:</b>
 
 <ul>
-<li><a href="https://github.com/joelparkerhenderson/system_quality_attributes">System quality attributes</a>
+<li><a href="https://github.com/joelparkerhenderson/system_quality_attributes">System quality attributes (SQAs)</a>
 <li><a href="https://github.com/joelparkerhenderson/architecture_decision_record">Architecture Decision Record (ADR)</a>
 <li><a href="https://github.com/joelparkerhenderson/enterprise_architecture_assessment">Enterprise architecture assessment</a>
 <li><a href="https://github.com/joelparkerhenderson/git_commit_message">Git commit message</a>
@@ -81,20 +101,20 @@
 <li><a href="https://github.com/joelparkerhenderson/demo_oracle_sql_todo">Oracle SQL todo</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_python_flask_hello_world">Python Flask hello world</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_ruby_sinatra_hello_world">Ruby Sinatra hello world</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swagger">Swagger</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swift_alamofire">Swift Alamofire</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swift_carthage">Swift Carthage</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swagger">Swagger a.k.a. OpenAPI</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swift_alamofire">Swift Alamofire for networking</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swift_carthage">Swift Carthage for packagem management</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_charts">Swift Charts</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_excel_xlsx_reader_writer">Swift Excel XLSX reader/writer</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_hello_world">Swift Hello World</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_items">Swift items</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_master_detail">Swift master/detail</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_news">Swift news</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swift_objectmapper">Swift ObjectMapper</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swift_quick_nimble">Swift Quick/Nimble</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swift_realm">Swift Realm</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swift_rest">Swift Rest</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_swift_rest_master_detail_page">Swift Rest master/detail page</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swift_objectmapper">Swift ObjectMapper for JSON models</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swift_quick_nimble">Swift Quick Nimble for TDD BDD testing</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swift_realm">Swift Realm mobile database</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swift_rest">Swift REST</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_swift_rest_master_detail_page">Swift REST master/detail page</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_sqlite">Swift SQLite</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_taylor">Swift Taylor</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_swift_text_view">Swift text view</a>
@@ -102,12 +122,19 @@
 <li><a href="https://github.com/joelparkerhenderson/demo_terraform_2">Terraform 2</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_vagrant_virtualbox_aws">Vagrant VirtualBox AWS</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_yaml_files_to_swift_classes">YAML files to Swift classes</a>
+</li>
+
+<b>Demo of media APIs:</b>
+
+<ul>
+<li><a href="https://github.com/joelparkerhenderson/gracenote_api_scripts">Gracenote API scripts</a>
+<li><a href="https://github.com/joelparkerhenderson/internationalshowtimes_api_scripts">International Showtimes API scripts</a>
 </ul>
 
 <b>Misc code:</b>
 
 <ul>
-<li><a href="https://github.com/joelparkerhenderson/">Brewfile</a>
+<li><a href="https://github.com/joelparkerhenderson/brewfile">Brewfile</a>
 <li><a href="https://github.com/joelparkerhenderson/excel_vba_save_as_csv">Excel VBA Save As CSV</a>
 <li><a href="https://github.com/joelparkerhenderson/excel_vba_save_as_json">Excel VBA Save As JSON</a>
 <li><a href="https://github.com/joelparkerhenderson/rubymotion_easy_ui_table_view">RubyMotion easy UI tableview</a>
