--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@ team
 <li><a href="https://github.com/joelparkerhenderson/first_aid_kit">First ait kit for teams</a>
 </ul>
 
-
 <b>For projects:</b>
 
 <ul>
@@ -57,14 +56,14 @@ team
 <li><a href="https://github.com/joelparkerhenderson/responsible_disclosure">Responsible disclosure</a>
 </ul>
 
-<b>For assessments:</b>
+<b>For business assessments:</b>
 
 <ul>
+<li><a href="https://github.com/joelparkerhenderson/strategic_balanced_scorecard">Strategic Balanced Scorecard (SBS)</a>
 <li><a href="https://github.com/joelparkerhenderson/maturity_models">Maturity models (MMs)</a>
 <li><a href="https://github.com/joelparkerhenderson/value_stream_mapping">Value Stream Mapping (VSM)</a>
-<li><a href="https://github.com/joelparkerhenderson/strategic_balanced_scorecard">Strategic Balanced Scorecard (SBS)</a>
 <li><a href="https://github.com/joelparkerhenderson/agile_assessment">Agile assessment</a>
-<li><a href="https://github.com/joelparkerhenderson/lean_business_lists">Lean business lists</a> ??
+<li><a href="https://github.com/joelparkerhenderson/lean_business_lists">Lean business lists</a>
 </ul>
 
 <b>For technical consulting:</b>
