--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ team
 <b>For goals:</b>
 
 <ul>
-<li><a href="https://github.com/joelparkerhenderson/objectives_and_key_results">Objectives & Key Results (OKRs)</a>
+<li><a href="https://github.com/joelparkerhenderson/objectives_and_key_results">Objectives &amp;Key Results (OKRs)</a>
 <li><a href="https://github.com/joelparkerhenderson/key_performance_indicator">Key Performance Indictor (KPI)</a>
-<li><a href="https://github.com/joelparkerhenderson/metrics">Metrics: ideas & examples</a>
-<li><a href="https://github.com/joelparkerhenderson/vision_statements">Vision statements: ideas & examples</a>
+<li><a href="https://github.com/joelparkerhenderson/metrics">Metrics: ideas &amp;examples</a>
+<li><a href="https://github.com/joelparkerhenderson/vision_statements">Vision statements: ideas &amp;examples</a>
 <li><a href="https://github.com/joelparkerhenderson/wordbooks">Wordbooks: glossaries, lexicons, terminology</a>
 </ul>
 
@@ -51,7 +51,7 @@ team
 <ul>
 <li><a href="https://github.com/joelparkerhenderson/statement_of_work">Statement Of Work (SOW) template</a>
 <li><a href="https://github.com/joelparkerhenderson/pitch_deck_quick_start">Pitch deck quick start</a>
-<li><a href="https://github.com/joelparkerhenderson/milestones">Milestones ideas & examples</a>
+<li><a href="https://github.com/joelparkerhenderson/milestones">Milestones ideas &amp;examples</a>
 <li><a href="https://github.com/joelparkerhenderson/project_management_checklist">Project management checklist</a>
 <li><a href="https://github.com/joelparkerhenderson/responsible_disclosure">Responsible disclosure</a>
 </ul>
@@ -59,6 +59,7 @@ team
 <b>For business assessments:</b>
 
 <ul>
+<li><a href="https://github.com/joelparkerhenderson/discovery_assessment">Discovery assessment</a>
 <li><a href="https://github.com/joelparkerhenderson/strategic_balanced_scorecard">Strategic Balanced Scorecard (SBS)</a>
 <li><a href="https://github.com/joelparkerhenderson/maturity_models">Maturity models (MMs)</a>
 <li><a href="https://github.com/joelparkerhenderson/value_stream_mapping">Value Stream Mapping (VSM)</a>
@@ -72,6 +73,7 @@ team
 <li><a href="https://github.com/joelparkerhenderson/system_quality_attributes">System quality attributes (SQAs)</a>
 <li><a href="https://github.com/joelparkerhenderson/architecture_decision_record">Architecture Decision Record (ADR)</a>
 <li><a href="https://github.com/joelparkerhenderson/enterprise_architecture_assessment">Enterprise architecture assessment</a>
+<li><a href="https://github.com/joelparkerhenderson/git_flow_help">Git flow help</a>
 <li><a href="https://github.com/joelparkerhenderson/git_commit_message">Git commit message</a>
 </ul>
 
@@ -88,7 +90,7 @@ team
 <li><a href="https://github.com/joelparkerhenderson/demo_datawire_python">Datawire Python</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_datawire_ruby">Datawire Ruby</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_date_time_format">Date-Time Format</a>
-<li><a href="https://github.com/joelparkerhenderson/demo_elixir_phoenix">Elixir & Phoenix</a>
+<li><a href="https://github.com/joelparkerhenderson/demo_elixir_phoenix">Elixir &amp;Phoenix</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_java_spring_boot_rest">Java Spring Boot Rest</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_job_title_descriptions">Job title bescriptions</a>
 <li><a href="https://github.com/joelparkerhenderson/demo_json_api_beginner">JSON API beginner</a>
