--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ enterprise_architecture_assessment
 etsy_leadership
 inspiring_people
 joelparkerhenderson_perl_cgi_util_1990s
-joelparkerhenderson_site
+joelparkerhenderson_site 
 lean_business_lists
 metrics
 milestones
@@ -53,7 +53,7 @@ team
 <li><a href="https://github.com/joelparkerhenderson/pitch_deck_quick_start">Pitch deck quick start</a>
 <li><a href="https://github.com/joelparkerhenderson/milestones">Milestones ideas &amp;examples</a>
 <li><a href="https://github.com/joelparkerhenderson/project_management_checklist">Project management checklist</a>
-<li><a href="https://github.com/joelparkerhenderson/responsible_disclosure">Responsible disclosure</a>
+<li><a href="https://github.com/joelparkerhenderson/coordinated_disclosure">Coordinated disclosure</a>
 </ul>
 
 <b>For business assessments:</b>
@@ -75,6 +75,8 @@ team
 <li><a href="https://github.com/joelparkerhenderson/enterprise_architecture_assessment">Enterprise architecture assessment</a>
 <li><a href="https://github.com/joelparkerhenderson/git_flow_help">Git flow help</a>
 <li><a href="https://github.com/joelparkerhenderson/git_commit_message">Git commit message</a>
+<li><a href="https://github.com/sixarm/sixarm_company_consulting_agreement">Consulting agreement</a>
+<li><a href="https://github.com/sixarm/sixarm_company_confidentiality_agreement">Confidentiality agreement</a>
 </ul>
 
 <b>Demo Code:</b>
