--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ team
 <ul>
     <li><a href="https://github.com/joelparkerhenderson/leadership">Leadership: selected notes &amp; advice</a></li>
     <li><a href="https://github.com/joelparkerhenderson/vision_statements">Vision statements &amp; mission statements</a></li>
-    <li><a href="https://github.com/joelparkerhenderson/social_value_orientation">Social value orientation (SVO)</a></li>
     <li><a href="https://github.com/joelparkerhenderson/intent_plan">Intent plan</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/company_culture">Company culture</a></li>
 </ul>
 
 <b>For goals:</b>
@@ -40,10 +40,16 @@ team
     <li><a href="https://github.com/joelparkerhenderson/key_performance_indicator">Key Performance Indictor (KPI)</a></li>
     <li><a href="https://github.com/joelparkerhenderson/key_risk_indicator">Key Risk Indicator (KRI)</a></li>
     <li><a href="https://github.com/joelparkerhenderson/critical_success_factor">Critical success factor (CSF)</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/goals_ideas_steps_tasks">Goals Ideas Steps Tasks (GIST)</a></li>
     <li><a href="https://github.com/joelparkerhenderson/smart_criteria">SMART criteria</a></li>
+</ul>
+
+<b>For progress:</b>
+
+<ul>
     <li><a href="https://github.com/joelparkerhenderson/metrics">Metrics: ideas &amp; examples</a></li>
-    <li><a href="https://github.com/joelparkerhenderson/goals_ideas_steps_tasks">Goals ideas steps tasks (GIST)</a></li>
     <li><a href="https://github.com/joelparkerhenderson/milestones">Milestones: ideas &amp; examples</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/outputs_vs_outcomes">Outputs vs. outcomes (OVO)</a></li>
 </ul>
 
 <b>For decisions:</b>
@@ -52,6 +58,7 @@ team
     <li><a href="https://github.com/joelparkerhenderson/decision_record">Decision Record (DR) template</a></li>
     <li><a href="https://github.com/joelparkerhenderson/architecture_decision_record">Architecture Decision Record (ADR)</a></li>
     <li><a href="https://github.com/joelparkerhenderson/spade_decision_framework">SPADE decision framework</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/ooda_loop">OODA loop: Observe Orient Decide Act</a></li>
 </ul>
 
 <b>For teamwork:</b>
@@ -68,7 +75,7 @@ team
     <li><a href="https://github.com/joelparkerhenderson/ground_rules">Ground rules for teams</a></li>
     <li><a href="https://github.com/joelparkerhenderson/code_of_conduct_guidelines">Code of conduct guidelines</a></li>
     <li><a href="https://github.com/joelparkerhenderson/crucial_conversations">Crucial conversations</a></li>
-    <li><a href="https://github.com/joelparkerhenderson/company_culture">Company culture</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/social_value_orientation">Social value orientation (SVO)</a></li>
 </ul>
 
 <b>For project participants:</b>
@@ -77,7 +84,6 @@ team
     <li><a href="https://github.com/joelparkerhenderson/responsibility_assignment_matrix">Responsibility assignment matrix (RAM)</a></li>
     <li><a href="https://github.com/joelparkerhenderson/stakeholder_analysis">Stakeholder analysis</a></li>
     <li><a href="https://github.com/joelparkerhenderson/wordbooks">Wordbooks: glossaries, lexicons, terminology</a></li>
-    <li><a href="https://github.com/joelparkerhenderson/outputs_vs_outcomes">Outputs vs. outcomes (OVO)</a></li>
 </ul>
 
 <b>For thinking:</b>
@@ -86,7 +92,6 @@ team
     <li><a href="https://github.com/joelparkerhenderson/oblique_strategies">Oblique strategies for creative thinking</a></li>
     <li><a href="https://github.com/joelparkerhenderson/powerful_questions">Powerful questions: insight, innovation, action</a></li>
     <li><a href="https://github.com/joelparkerhenderson/always-improving">Always improving: book summaries</a></li>
-    <li><a href="https://github.com/joelparkerhenderson/ooda_loop">OODA loop</a></li>
     <li><a href="https://github.com/joelparkerhenderson/quad_chart">Quad chart</a></li>
     <li><a href="https://github.com/joelparkerhenderson/queueing_theory">Queueing theory</a></li>
 </ul>
@@ -101,6 +106,7 @@ team
     <li><a href="https://github.com/joelparkerhenderson/project_management_checklist">Project management checklist</a></li>
     <li><a href="https://github.com/joelparkerhenderson/issues">Issues</a></li>
     <li><a href="https://github.com/joelparkerhenderson/coordinated_disclosure">Coordinated disclosure</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/system_quality_attributes">System quality attributes (SQAs)</a></li>
 </ul>
 
 <b>For startups:</b>
@@ -128,7 +134,6 @@ team
 <b>For technical consulting:</b>
 
 <ul>
-    <li><a href="https://github.com/joelparkerhenderson/system_quality_attributes">System quality attributes (SQAs)</a></li>
     <li><a href="https://github.com/sixarm/sixarm_company_consulting_agreement">Consulting agreement</a></li>
     <li><a href="https://github.com/sixarm/sixarm_company_confidentiality_agreement">Confidentiality agreement</a></li>
 </ul>
@@ -144,7 +149,7 @@ team
     <li><a href="https://github.com/joelparkerhenderson/github_special_files_and_paths">GitHub special files and paths</a></li>
 </ul>
 
-<b>Demo Code:</b>
+<b>Demo code:</b>
 
 <ul>
     <li><a href="https://github.com/joelparkerhenderson/demo_aws_lambda">AWS Lamba</a></li>
