Add versioning links

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@ team
     <li><a href="https://github.com/joelparkerhenderson/git_workflow_help">Git workflow help</a></li>
     <li><a href="https://github.com/joelparkerhenderson/git_hooks">Git hooks: examples &amp; helpers</a></li>
     <li><a href="https://github.com/joelparkerhenderson/github_special_files_and_paths">GitHub special files and paths</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/versioning">Versioning: ideas &amp; examples</a></li>
+    <li><a href="https://github.com/joelparkerhenderson/monorepo_vs_polyrepo">Monorepo vs. polyrepo</a></li>
 </ul>
 
 <b>Demo code:</b>
